Spielstart Dialoge besser angeordnet

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding//src/main/java/gui/GameBoardPanel.java=UTF-8
-encoding//src/main/resources/Connections.txt=UTF-8
+encoding//src/main/resources/Germany\ original/Connections.txt=UTF-8
+encoding//src/main/resources/Germany\ original/Locations.txt=UTF-8
+encoding//src/main/resources/Germany\ original/Missioncards.txt=UTF-8
+encoding//src/main/resources/Germany\ original/Rules.txt=UTF-8
 encoding//src/main/resources/Ideas.txt=UTF-8
-encoding//src/main/resources/Locations.txt=UTF-8
-encoding//src/main/resources/Missioncards.txt=UTF-8
